fixed layout on small sizes

--- a/app/assets/stylesheets/narrow.sass
+++ b/app/assets/stylesheets/narrow.sass
@@ -7,17 +7,16 @@ $font_a: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvet
 $font_b: "HelveticaNeue-CondensedBold", "Helvetica Neue Condensed Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
 
 html, body
-  min-width: 320px
-  max-width: 320px
-  width: 320px
   font-size: 14px
+  width: 100%
+  min-width: 100%
 
 #sidebar-bg
   display: none
 
 #sidebar
+  width: 100%
   position: relative
-  width: 320px
   padding: 20px 0
   margin: 0
   border: 0
@@ -52,14 +51,15 @@ html, body
       margin-right: 10px
 
 #content
-  width: 300px
   float: none
   padding: 0
   margin: 0
   border: 0
-  margin: 0 10px
+  width: 100%
+  #body
+    margin: 0 10px
   img
-    max-width: 300px
+    max-width: 100%
   h1
     margin-top: 10px
     font-size: 36px
